# chzzk-vod-dl

./: .gitignore  Cargo.toml  Dockerfile  README.md  api.go  api_test.go  cvdl-crontab  docker-compose.yml  env.go  go.mod  job.sh  main.go  memo.go  script.sh  session.go  utils.go
src/: api.rs  main.rs  memo.rs  utils.rs
