[package]
name = "chzzk-vod-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread"] }
url = "2.5.4"
